# interval-timer

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: backend-ci.yml
app/: core.py  debug.py  main.py  model.py  util.py
templates/: index.html
tests/: test_fastapi.py  test_interval.py  test_training.py  test_workout.py
ui-app/: README.md  angular.json  package-lock.json  package.json
ui-app/src/app/: app.spec.ts
