[project]
name = "interval-timer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.128.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.2",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
